2004-12-25  Philippe Gerum  <rpm@localhost>

	* nucleus/fusion.c (__pthread_start_timer_rt): Fix return code.

2004-12-24  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/types.h: Define ROOT_THREAD_INIT/EXIT for use in
	context-agnostic (kernel/uvm) apps.

	* fusion: __xeno_*_* -> __fusion_*_*.

	* include/nucleus/GNUmakefile.am: Optionally recurse into asm-uvm/
	during installation.

	* configure.in: Add -D_GNU_SOURCE -D_REENTRANT to
	RTAI_USER_CFLAGS.

2004-12-22  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* nucleus/Kconfig: Hide configuration of per-cpu timers. It is
	enabled by default and may be disabled only when "expert mode" is
	activated.

2004-12-21  Philippe Gerum  <rpm@xenomai.org>

	* sim: Fix a few glitches and update the necessary bits to run the
	RTAI skin.

	* GNUmakefile.am (install-data-local): Add "build" and "source"
	symlinks in $prefix.

2004-12-21  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* include/nucleus/pod.h (xnpod_ticks2ns) : Remove useless llimd.

2004-12-20  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* include/nucleus/asm-i386/hal.h: Mark arithmetic routines
	arguments const, to allow better compiler optimization.

	* nucleus/shadow.c (xnshadow_ticks2*): Really roll-back slow
	implementations.

	* nucleus/shadow.c (xnshadow_substitute_syscall): Only pass
	positive arguments to xnshadow_ticks2ts.

2004-12-19  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* Per-cpu timers implementation; pod and timer: Each CPU has a
	timerwheel, a timer object is attached to a sched structure, a new
	call xntimer_set_sched allowing to change this structure. When a
	timer is modified on a distant CPU, xnarch_send_timer_ipi is
	called. The HAL is expected to either install the handler passed
	to rthal_request_timer for this IPI, or to use the same interrupt
	for the timer and this IPI (the x86 case).

	* nucleus/timer.c (xntimer_next_shot): Round delays greater than